k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: openai-ui
  name: openai-ui
  namespace: openai-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: openai-ui
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        io.kompose.service: openai-ui
    spec:
      autoMountServiceAccountToken: false
      containers:
        - name: openai-ui
          image: ghcr.io/fhswf/openai-ui:0.34.0
          resources:
            requests:
              ephemeral-storage: 256Mi
              memory: 128Mi
              cpu: 500m
            limits:
              memory: 512Mi
              cpu: 2000m
          ports:
            - containerPort: 80
      restartPolicy: Always
status: {}
